modification du tableau syntaxique
ATTENTION NE MARCHE PAS

--- a/Etape5/Result.html
+++ b/Etape5/Result.html
@@ -10,10 +10,12 @@
 	<p>Exemple de texte de test</p>
 	<h1>avec un titre de niveau 1</h1>
 	<h1>et un titre de niveau 2</h1>
-	<ul>une liste comportant 3 items</ul>
-	<ul>le second avec un texte non formatté</ul>
-	<ul>et le troisième avec un texte </ul>
-	<ul>en italique </ul>
+	<ul>
+		<li>une liste comportant 3 items</li>
+		<li>le second avec un texte non formatté</li>
+		<li>et le troisième avec un texte </li>
+		<li>en italique </li>
+	</ul>
 	<p>puis un texte </p>
 	<p>en gras </p>
 	<p>et un autre </p>
