--- a/Etape5/Result.html
+++ b/Etape5/Result.html
@@ -4,21 +4,24 @@
 	<title>Document</title>
 </head>
 <body>
-	<p>Exemple de texte de test</p>
-	<h1>avec un titre de niveau 1</h1>
-	<h1>et un titre de niveau 2</h1>
+	<h1>ceci est un titre de niveau 1</h1>
 	<ul>
-		<li>une liste comportant 3 items</li>
-		<li>le second avec un texte non formatté</li>
-		<li>et le troisième avec un texte </li>
-		<li>en italique </li>
+		<li>item 1</li>
+		<li>item 2</li>
+		<li>item 3</li>
 	</ul>
-	<p>puis un texte </p>
-	<p>en gras </p>
-	<p>et un autre </p>
-	<p>en gras italique </p>
-	<p>ici un caractère interdit : </p>
-	<p>et ici un texte </p>
-	<p>synatxiquement incorrect </p>
+	<ul>
+		<li>itembis1</li>
+		<li>itembis2</li>
+		<li>itembis3</li>
+	</ul>
+	<p>texte de base suivit d'un autre texte</p>
+	<h2>Titre de niveau 2</h2>
+	<h3>Titre de niveau 3</h3>
+	<h5>Titre de niveau 5</h5>
+	<p>autre texte parceque c'est drôle</p>
+	<p>avec <i>italique</i>et <b>gras</b>et <b><i>gras Et italique</b></i></p>
+	<p>avec une * dans le texte, et un autre test :</p>
+	<p><i>direct italique</i></p>
 </body>
 </html>
